--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6734,7 +6734,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-28T18:39:14Z</date>
+						<date>2019-03-31T23:06:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6979,6 +6979,16 @@
 								<key>Size</key>
 								<integer>340983</integer>
 							</dict>
+							<key>files/stacks-image-529cde2.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GXFXYjQLv+hV
+								FDCl0G8p2g==
+								</data>
+								<key>Size</key>
+								<integer>25905</integer>
+							</dict>
 							<key>files/stacks-image-5433a01-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7029,6 +7039,16 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
+							<key>files/stacks-image-6037ffd-500x500.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								M4oUzojSpmfe
+								7X28dzP+1Q==
+								</data>
+								<key>Size</key>
+								<integer>56712</integer>
+							</dict>
 							<key>files/stacks-image-6298502.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7048,6 +7068,26 @@
 								</data>
 								<key>Size</key>
 								<integer>29317</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Apm0YX/gnbI3
+								zp4eGQJLSg==
+								</data>
+								<key>Size</key>
+								<integer>449741</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2VvDVxI1WSB
+								A5Oq08LL9A==
+								</data>
+								<key>Size</key>
+								<integer>1688404</integer>
 							</dict>
 							<key>files/stacks-image-6d7780c-350x375.png</key>
 							<dict>
@@ -7593,31 +7633,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								meQzls8YPbBx
-								AP8zZNS5dg==
+								pW5PWNqq1qj4
+								6wInTMSELQ==
 								</data>
 								<key>Size</key>
-								<integer>353663</integer>
+								<integer>366705</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UaMvGuN9vrHa
-								9+AJkQS6LA==
+								jZNXgz6PipIl
+								eASZ+y9HYA==
 								</data>
 								<key>Size</key>
-								<integer>32395</integer>
+								<integer>32941</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								k1DrztFJFO02
-								9NnILlaJtA==
+								iI8DqB4lJMfT
+								Eht4YUgJnA==
 								</data>
 								<key>Size</key>
-								<integer>265415</integer>
+								<integer>275486</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8984,7 +9024,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-31T23:06:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9119,6 +9159,16 @@
 								<key>Size</key>
 								<integer>340983</integer>
 							</dict>
+							<key>files/stacks-image-529cde2.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GXFXYjQLv+hV
+								FDCl0G8p2g==
+								</data>
+								<key>Size</key>
+								<integer>25905</integer>
+							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -9129,6 +9179,16 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
+							<key>files/stacks-image-6037ffd-500x500.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								M4oUzojSpmfe
+								7X28dzP+1Q==
+								</data>
+								<key>Size</key>
+								<integer>56712</integer>
+							</dict>
 							<key>files/stacks-image-6298502.png</key>
 							<dict>
 								<key>Digest</key>
@@ -9138,6 +9198,26 @@
 								</data>
 								<key>Size</key>
 								<integer>69706</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Apm0YX/gnbI3
+								zp4eGQJLSg==
+								</data>
+								<key>Size</key>
+								<integer>449741</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2VvDVxI1WSB
+								A5Oq08LL9A==
+								</data>
+								<key>Size</key>
+								<integer>1688404</integer>
 							</dict>
 							<key>files/stacks-image-6db2017-500x376.jpg</key>
 							<dict>
@@ -9343,31 +9423,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								B5yKuLVjU7z7
-								G+bAqE8U8A==
+								EQ818m9fNUjb
+								gubkILADjg==
 								</data>
 								<key>Size</key>
-								<integer>216561</integer>
+								<integer>229603</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								RvJyyAWwncRR
-								HNDTNJqPtg==
+								pP+YIOVgpstA
+								dxWhB9Z5Dg==
 								</data>
 								<key>Size</key>
-								<integer>29483</integer>
+								<integer>30029</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y9rYhMUWG9VX
-								Z5fQAipR/g==
+								dVC42G7/f8Om
+								VeVBBi/cVA==
 								</data>
 								<key>Size</key>
-								<integer>147282</integer>
+								<integer>157353</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13946,7 +14026,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-31T15:27:05Z</date>
+						<date>2019-03-31T23:06:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14985,8 +15065,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								m+8B9jJIhJnx
-								MNgBpzppaA==
+								FqSIm7J7eOv9
+								quA0QhiPrw==
 								</data>
 								<key>Size</key>
 								<integer>3748</integer>
@@ -15133,7 +15213,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEoiebXWdWADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEov8Cp8D2ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15143,14 +15223,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSiJ5tda
-				0YAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSi/wKnw
+				3IAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBKInm11sd
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBKL/AqfEP
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15160,7 +15240,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBKInm11tGgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBKL/AqfEwgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15170,7 +15250,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBKInm11togAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBKL/AqfFSgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
