--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-31T23:06:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -170,6 +170,16 @@
 								<key>Size</key>
 								<integer>340983</integer>
 							</dict>
+							<key>files/stacks-image-529cde2.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GXFXYjQLv+hV
+								FDCl0G8p2g==
+								</data>
+								<key>Size</key>
+								<integer>25905</integer>
+							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -180,6 +190,16 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
+							<key>files/stacks-image-6037ffd-500x500.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								M4oUzojSpmfe
+								7X28dzP+1Q==
+								</data>
+								<key>Size</key>
+								<integer>56712</integer>
+							</dict>
 							<key>files/stacks-image-6298502.png</key>
 							<dict>
 								<key>Digest</key>
@@ -189,6 +209,26 @@
 								</data>
 								<key>Size</key>
 								<integer>69706</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Apm0YX/gnbI3
+								zp4eGQJLSg==
+								</data>
+								<key>Size</key>
+								<integer>449741</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2VvDVxI1WSB
+								A5Oq08LL9A==
+								</data>
+								<key>Size</key>
+								<integer>1688404</integer>
 							</dict>
 							<key>files/stacks-image-6db2017-500x376.jpg</key>
 							<dict>
@@ -394,31 +434,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								B5yKuLVjU7z7
-								G+bAqE8U8A==
+								EQ818m9fNUjb
+								gubkILADjg==
 								</data>
 								<key>Size</key>
-								<integer>216561</integer>
+								<integer>229603</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								RvJyyAWwncRR
-								HNDTNJqPtg==
+								pP+YIOVgpstA
+								dxWhB9Z5Dg==
 								</data>
 								<key>Size</key>
-								<integer>29483</integer>
+								<integer>30029</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y9rYhMUWG9VX
-								Z5fQAipR/g==
+								dVC42G7/f8Om
+								VeVBBi/cVA==
 								</data>
 								<key>Size</key>
-								<integer>147282</integer>
+								<integer>157353</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
