--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-28T18:39:14Z</date>
+						<date>2019-03-31T23:06:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -280,6 +280,16 @@
 								<key>Size</key>
 								<integer>340983</integer>
 							</dict>
+							<key>files/stacks-image-529cde2.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GXFXYjQLv+hV
+								FDCl0G8p2g==
+								</data>
+								<key>Size</key>
+								<integer>25905</integer>
+							</dict>
 							<key>files/stacks-image-5433a01-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -330,6 +340,16 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
+							<key>files/stacks-image-6037ffd-500x500.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								M4oUzojSpmfe
+								7X28dzP+1Q==
+								</data>
+								<key>Size</key>
+								<integer>56712</integer>
+							</dict>
 							<key>files/stacks-image-6298502.png</key>
 							<dict>
 								<key>Digest</key>
@@ -349,6 +369,26 @@
 								</data>
 								<key>Size</key>
 								<integer>29317</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Apm0YX/gnbI3
+								zp4eGQJLSg==
+								</data>
+								<key>Size</key>
+								<integer>449741</integer>
+							</dict>
+							<key>files/stacks-image-6c2cdff-498x498@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								W2VvDVxI1WSB
+								A5Oq08LL9A==
+								</data>
+								<key>Size</key>
+								<integer>1688404</integer>
 							</dict>
 							<key>files/stacks-image-6d7780c-350x375.png</key>
 							<dict>
@@ -894,31 +934,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								meQzls8YPbBx
-								AP8zZNS5dg==
+								pW5PWNqq1qj4
+								6wInTMSELQ==
 								</data>
 								<key>Size</key>
-								<integer>353663</integer>
+								<integer>366705</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UaMvGuN9vrHa
-								9+AJkQS6LA==
+								jZNXgz6PipIl
+								eASZ+y9HYA==
 								</data>
 								<key>Size</key>
-								<integer>32395</integer>
+								<integer>32941</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								k1DrztFJFO02
-								9NnILlaJtA==
+								iI8DqB4lJMfT
+								Eht4YUgJnA==
 								</data>
 								<key>Size</key>
-								<integer>265415</integer>
+								<integer>275486</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
