--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-04T18:49:51Z</date>
+						<date>2019-04-04T22:34:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,31 +524,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WRKdz/eXYbDD
-								O06GhmPsWA==
+								SxumMHtX8m9z
+								PBWjI6Nzbw==
 								</data>
 								<key>Size</key>
-								<integer>572134</integer>
+								<integer>599774</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								vn0c+WDEY7l8
-								pGm+RzZvoQ==
+								HyjjeW44eB7Y
+								o7gGVZsPlw==
 								</data>
 								<key>Size</key>
-								<integer>64427</integer>
+								<integer>78805</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								hLUfXnRoy1Ju
-								2Hv0D8in3g==
+								rooF5YpaUusI
+								QLwmCVztPQ==
 								</data>
 								<key>Size</key>
-								<integer>795112</integer>
+								<integer>961269</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
