--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-01-07T20:31:51Z</date>
+						<date>2022-01-18T14:06:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -840,6 +840,16 @@
 								<key>Size</key>
 								<integer>18818</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page91.css</key>
 							<dict>
 								<key>Digest</key>
@@ -864,11 +874,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								h4sT+Lt8DxC/
-								2Tmi2Xs8uw==
+								gsc9eBKM6sOM
+								FgJ0/9MDXA==
 								</data>
 								<key>Size</key>
-								<integer>306696</integer>
+								<integer>306794</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
