--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Education/ChildPages/6-VERSO/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-05-05T22:06:08Z</date>
+						<date>2022-05-10T21:35:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -220,6 +220,16 @@
 								<key>Size</key>
 								<integer>19470</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page4.css</key>
 							<dict>
 								<key>Digest</key>
@@ -244,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mU9yS6Pz1eRh
-								8Hlw66OGPg==
+								8q/ORJ51UpSE
+								ZYowg5dgbQ==
 								</data>
 								<key>Size</key>
-								<integer>93720</integer>
+								<integer>91085</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
