--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -5,19 +5,20 @@
 	<key>expandedItems</key>
 	<array>
 		<string>page22</string>
+		<string>page9</string>
 		<string>page16</string>
 		<string>page87</string>
 		<string>page2</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>248</real>
 	<key>selectedItems</key>
 	<array>
-		<string>page18</string>
+		<string>page4</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
