--- a/vermontcomplexsystems-foundation.rw8/Pages/05-The-Shopboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-The-Shopboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-02-24T20:05:00Z</date>
+						<date>2023-02-28T17:15:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -190,6 +190,16 @@
 								<key>Size</key>
 								<integer>69264</integer>
 							</dict>
+							<key>files/stacks-image-5494ea4.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Tfc1obHhoTtj
+								9Src852eRg==
+								</data>
+								<key>Size</key>
+								<integer>122434</integer>
+							</dict>
 							<key>files/stacks-image-58a5206.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -270,6 +280,16 @@
 								<key>Size</key>
 								<integer>158737</integer>
 							</dict>
+							<key>files/stacks-image-c91e868.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ayV5fP5yWqK6
+								WhmrAEtklA==
+								</data>
+								<key>Size</key>
+								<integer>65519</integer>
+							</dict>
 							<key>files/stacks-image-e064dff.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -334,11 +354,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aKNlmL+BXfOG
-								BMjsSZZ41g==
+								0pcz3AIo1LnQ
+								20gKKZkfPw==
 								</data>
 								<key>Size</key>
-								<integer>154288</integer>
+								<integer>117708</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -354,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eRvRqYt6w8yS
-								b2/2Y6cw4g==
+								r4D8Hd4MPjR5
+								07gCiv3tqw==
 								</data>
 								<key>Size</key>
-								<integer>82482</integer>
+								<integer>58355</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
