--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Research/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Research/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-02-28T21:40:41Z</date>
+						<date>2023-03-20T14:46:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -240,6 +240,16 @@
 								<key>Size</key>
 								<integer>10237</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page22.css</key>
 							<dict>
 								<key>Digest</key>
@@ -264,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1+4qa/RQNwIk
-								OqlviFXIeQ==
+								b8+A558RkhxC
+								WgozFecq7Q==
 								</data>
 								<key>Size</key>
-								<integer>90607</integer>
+								<integer>90627</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
