--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/01-Research-Groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Research/ChildPages/01-Research-Groups/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-03-20T14:46:34Z</date>
+						<date>2023-03-20T16:14:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -160,6 +160,26 @@
 								<key>Size</key>
 								<integer>48323</integer>
 							</dict>
+							<key>files/small-525766.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uMd4+vmj17Hm
+								7vaQdq1Hpg==
+								</data>
+								<key>Size</key>
+								<integer>348385</integer>
+							</dict>
+							<key>files/small-525781.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uMd4+vmj17Hm
+								7vaQdq1Hpg==
+								</data>
+								<key>Size</key>
+								<integer>348385</integer>
+							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
 								<key>Digest</key>
@@ -230,16 +250,6 @@
 								<key>Size</key>
 								<integer>120338</integer>
 							</dict>
-							<key>files/stacks-image-efeb858.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								UvQY6zh2OyxQ
-								YgNuLFePQA==
-								</data>
-								<key>Size</key>
-								<integer>10237</integer>
-							</dict>
 							<key>files/stacks.css</key>
 							<dict>
 								<key>Digest</key>
@@ -254,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wecYaVAKN6CQ
-								mR1BStoEsg==
+								nt62CdySlSNv
+								/qHOz87b+g==
 								</data>
 								<key>Size</key>
-								<integer>167302</integer>
+								<integer>164628</integer>
 							</dict>
 							<key>files/stacks_page_page17.js</key>
 							<dict>
@@ -274,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s7OvDTtK48Cg
-								54BmBqd94g==
+								hRv4coJfr2pa
+								2aWpI1/ijA==
 								</data>
 								<key>Size</key>
-								<integer>90884</integer>
+								<integer>88328</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
