--- a/vermontcomplexsystems-foundation.rw8/Pages/05-Research/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-Research/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2023-03-20T14:46:34Z</date>
+						<date>2023-03-20T16:14:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -120,16 +120,6 @@
 								<key>Size</key>
 								<integer>30576</integer>
 							</dict>
-							<key>files/small-525410.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								uMd4+vmj17Hm
-								7vaQdq1Hpg==
-								</data>
-								<key>Size</key>
-								<integer>348385</integer>
-							</dict>
 							<key>files/small-525425.png</key>
 							<dict>
 								<key>Digest</key>
@@ -159,6 +149,16 @@
 								</data>
 								<key>Size</key>
 								<integer>48323</integer>
+							</dict>
+							<key>files/small-525765.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uMd4+vmj17Hm
+								7vaQdq1Hpg==
+								</data>
+								<key>Size</key>
+								<integer>348385</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -230,16 +230,6 @@
 								<key>Size</key>
 								<integer>120338</integer>
 							</dict>
-							<key>files/stacks-image-efeb858.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								UvQY6zh2OyxQ
-								YgNuLFePQA==
-								</data>
-								<key>Size</key>
-								<integer>10237</integer>
-							</dict>
 							<key>files/stacks.css</key>
 							<dict>
 								<key>Digest</key>
@@ -254,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AVcXCXSmPE6C
-								LGN8zttbDg==
+								lrgDOYnDwXO2
+								doIK5bJrPQ==
 								</data>
 								<key>Size</key>
-								<integer>167302</integer>
+								<integer>164628</integer>
 							</dict>
 							<key>files/stacks_page_page22.js</key>
 							<dict>
@@ -274,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								b8+A558RkhxC
-								WgozFecq7Q==
+								PMDQp2/ofoJL
+								0HPuu02TWA==
 								</data>
 								<key>Size</key>
-								<integer>90627</integer>
+								<integer>88071</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
